--- a/less/media.less
+++ b/less/media.less
@@ -89,10 +89,10 @@
 	// format nav bar in mobile mode properly
 	.navbar {
 		width: 100%;
-		margin-top: 5%;
 	}
 
 	.navigation {
+		padding-top: 5%;
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-evenly;
